# Gmaes101_Homework

./: .gitignore  Games101_Homework.code-workspace
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/: CMakeLists.txt  README.md  Triangle.hpp  main.cpp  rasterizer.cpp
Assignment2/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
